--- a/Assignment 1/Scrap for Assignment 1.ipynb
+++ b/Assignment 1/Scrap for Assignment 1.ipynb
@@ -16,7 +16,20 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from sodapy import Socrata\n",
     "import requests\n",
@@ -82,9 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['B02001_002E', 'B02001_003E', 'B02001_005E', 'B03001_003E', 'B19013_001E', 'B19301_001E', 'B23025_001E', 'B23025_005E', 'B17001_002E', 'B01003_001E', 'B25077_001E'])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "acs_variable_metadata = {'B02001_002E' : {'name': \"white\", 'dtype' : 'int'},\n",
     "                         'B02001_003E' : {'name': \"black\", 'dtype' : 'int'},\n",
@@ -102,39 +126,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CREATE TABLE census_17_031 (\n",
+      "white int,\n",
+      "black int,\n",
+      "asian int,\n",
+      "hispanic int,\n",
+      "median_income int,\n",
+      "per_capita_income int,\n",
+      "total_employed int,\n",
+      "unemployed int,\n",
+      "poverty int,\n",
+      "total_population int,\n",
+      "median_home_value int,\n",
+      "block_group INT, \n",
+      "county INT, \n",
+      "state INT, \n",
+      "tract INT)\n"
+     ]
+    }
+   ],
+   "source": [
+    "acs5_census_download(list(acs_variable_metadata.keys()),acs_variable_metadata,conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.execute('''\n",
+    "INSERT INTO combined_data\n",
+    "SELECT\n",
+    "service_request_type,\n",
+    "service_request_number,\n",
+    "date_service_request_received as creation_date,\n",
+    "'' as completion_date,\n",
+    "'' as days_to_complete,\n",
+    "street_address,\n",
+    "zip_code,\n",
+    "x_coordinate,\n",
+    "y_coordinate,\n",
+    "latitude,\n",
+    "longitude,\n",
+    "ward,\n",
+    "police_district,\n",
+    "community_area,\n",
+    "fips,\n",
+    "substr(fips,-4,1) as block_group\n",
+    "FROM vacant\n",
+    "UNION ALL\n",
+    "SELECT\n",
+    "type_of_service_request,\n",
+    "service_request_number,\n",
+    "creation_date,\n",
+    "completion_date,\n",
+    "julianday(completion_date) - julianday(creation_date) as days_to_complete,\n",
+    "street_address,\n",
+    "zip_code,\n",
+    "x_coordinate,\n",
+    "y_coordinate,\n",
+    "latitude,\n",
+    "longitude,\n",
+    "ward,\n",
+    "police_district,\n",
+    "community_area,\n",
+    "fips,\n",
+    "substr(fips,-4,1) as block_group\n",
+    "FROM alley\n",
+    "UNION ALL\n",
+    "SELECT\n",
+    "type_of_service_request,\n",
+    "service_request_number,\n",
+    "creation_date,\n",
+    "completion_date,\n",
+    "julianday(completion_date) - julianday(creation_date) as days_to_complete,\n",
+    "street_address,\n",
+    "zip_code,\n",
+    "x_coordinate,\n",
+    "y_coordinate,\n",
+    "latitude,\n",
+    "longitude,\n",
+    "ward,\n",
+    "police_district,\n",
+    "community_area,\n",
+    "'' as fips,\n",
+    "'' as block_group\n",
+    "FROM graffiti\n",
+    "''')\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTTPSConnectionPool(host='geo.fcc.gov', port=443): Max retries exceeded with url: /api/census/block/find?format=json&latitude=41.94653584714298&longitude=-87.70542956555967 (Caused by NewConnectionError('<urllib3.connection.VerifiedHTTPSConnection object at 0x7f1d359c5eb8>: Failed to establish a new connection: [Errno -2] Name or service not known',))\n"
+     ]
+    },
+    {
+     "ename": "OperationalError",
+     "evalue": "user-defined function raised exception",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-2d9865a3530c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mlocation\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m ''')\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0mconn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: user-defined function raised exception"
+     ]
+    }
+   ],
+   "source": [
+    "c.execute(\n",
+    "'''\n",
+    "INSERT INTO graffiti\n",
+    "SELECT \n",
+    "substr(creation_date, 7, 4) || '-' || substr(creation_date, 1,2) || '-' || substr(creation_date, 4,2) as creation_date,\n",
+    "status,\n",
+    "substr(completion_date, 7, 4) || '-' || substr(completion_date, 1,2) || '-' || substr(completion_date, 4,2) as completion_date,\n",
+    "service_request_number,\n",
+    "type_of_service_request,\n",
+    "surface_type,\n",
+    "graffiti_location,\n",
+    "street_address,\n",
+    "zip_code,\n",
+    "x_coordinate,\n",
+    "y_coordinate,\n",
+    "ward,\n",
+    "police_district,\n",
+    "community_area,\n",
+    "ssa,\n",
+    "latitude,\n",
+    "longitude,\n",
+    "location,\n",
+    "get_fips(latitude, longitude)\n",
+    "FROM graffiti_fs\n",
+    "where creation_date like '%/2016' \n",
+    "and (creation_date like '06/%' or \n",
+    "     creation_date like '07/%' or \n",
+    "     creation_date like'08/%')\n",
+    "and location != ''\n",
+    ";\n",
+    "''')\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "acs5_census_download(list(acs_variable_metadata.keys()),acs_variable_names,conn)"
+    "conn.commit()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
