--- a/Assignment 1/311 Data Exploration - Assignment 1.ipynb
+++ b/Assignment 1/311 Data Exploration - Assignment 1.ipynb
@@ -1,11 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **NOTE:** In order to see plots below, please [see this notebook in nbviewer](http://nbviewer.jupyter.org/github/vidal-anguiano/Machine-Learning-for-Public-Policy/blob/master/Assignment%201/311%20Data%20Exploration%20-%20Assignment%201.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
