cosmetic changes to notebook

--- a/Assignment 3/notebooks/Assignment 3.ipynb
+++ b/Assignment 3/notebooks/Assignment 3.ipynb
@@ -6377,7 +6377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Projects Preprocess Notes\n",
+    "## Projects Preprocess Notes\n",
     "\n",
     "Initial notes below, further preprocessing to be done this weekend.  \n",
     "\n",
